chore: add ki kp params and removed master_thesis in setBaseline
