# backend/application/doc/swaggerdef.yaml
@@ -322,11 +322,13 @@ components:
           type: number
         irrigationBaseline:
           type: number
-        irrigation_master_thesis:
-          type: string
         watering_hour:
           type: string
           format: time
+        ki:
+          type: number
+        kp:
+          type: number
     
     LogDto:
       type: object
